--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,10 @@
     <dimen name="button_padding">16dp</dimen>
     <dimen name="button_text_size">18sp</dimen>
     <dimen name="image_header_height">192dp</dimen>
+
+
+    <dimen name="margin">16dp</dimen>
+    <dimen name="icon_size">64dp</dimen>
+    <dimen name="title_text_size">20sp</dimen>
+    <dimen name="triple_margin">48dp</dimen>
 </resources>
