--- a/app/src/main/res/layout/fragment_oauthusers.xml
+++ b/app/src/main/res/layout/fragment_oauthusers.xml
@@ -4,6 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".login.LoginFragment">
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="eu.rudisch.oauthadmin.oauthusers.OAuthUserViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/loginConstraint"
         android:layout_width="match_parent"
@@ -20,5 +27,18 @@
             android:textSize="@dimen/title_text_size"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/users_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin"
+            android:layout_marginTop="@dimen/margin"
+            android:layout_marginBottom="@dimen/triple_margin"
+            android:text=""
+            android:textSize="@dimen/title_text_size"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <!--            android:text="@{viewModel.oAuthUsers}"-->
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
