--- a/app/src/main/res/layout/fragment_oauthusers.xml
+++ b/app/src/main/res/layout/fragment_oauthusers.xml
@@ -28,17 +28,26 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/users_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin"
-            android:layout_marginTop="@dimen/margin"
-            android:layout_marginBottom="@dimen/triple_margin"
-            android:text=""
-            android:textSize="@dimen/title_text_size"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <WebView
+            android:id="@+id/oAuthUsers"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true" />
+
+<!--        <TextView-->
+<!--            android:id="@+id/users_text"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="@dimen/margin"-->
+<!--            android:layout_marginTop="@dimen/margin"-->
+<!--            android:layout_marginBottom="@dimen/triple_margin"-->
+<!--            android:text=""-->
+<!--            android:textSize="@dimen/title_text_size"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
         <!--            android:text="@{viewModel.oAuthUsers}"-->
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
