--- a/app/src/main/res/layout/fragment_oauthusers.xml
+++ b/app/src/main/res/layout/fragment_oauthusers.xml
@@ -32,13 +32,12 @@
             android:id="@+id/users_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin"
-            android:layout_marginTop="@dimen/margin"
-            android:layout_marginBottom="@dimen/triple_margin"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
             android:text=""
             android:textSize="@dimen/title_text_size"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/title_text" />
         <!--            android:text="@{viewModel.oAuthUsers}"-->
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
